panier ok sauf bdd tout ok sauf easy admin avec ajout . env

--- a/.env
+++ b/.env
@@ -28,6 +28,6 @@ APP_SECRET=c3b7dcc62183da2a7b8be898ca6d115a
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:root@192.168.1.2/ppevivian"
+DATABASE_URL="mysql://root:JeSuisUnDieuPhpMyAdmin@192.168.1.2/ppevivian"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
